теперь еще и тайминги вешаются на разные кнопки